--- a/fdpa-resolutions.html
+++ b/fdpa-resolutions.html
@@ -66,7 +66,7 @@
   </head>
   <body>
     <h2>Fair Districts PA - Local Resolutions</h2>
-    <p>To date, at least 80 counties and municipalities across Pennsylvania have adopted a resolution in support of an indpendent citizens' redistricting commission.</p>
+    <p>To date, more than 80 counties and municipalities across Pennsylvania have adopted a resolution in support of an indpendent citizens' redistricting commission.</p>
     <p>Check out the map below to find out what's going on in your area.  If your municipality is already in progress, please <a href="https://www.fairdistrictspa.com/local-groups">contact your local group</a> to get involved.  Otherwise, <a href="https://www.fairdistrictspa.com/take-action/pass-a-local-resolution">find out how to get started</a>.</p>
     <p>Legend: <img src="https://maps.google.com/mapfiles/marker_green.png" /> Passed &nbsp; <img src="https://storage.googleapis.com/support-kms-prod/SNP_2752063_en_v0" /> In progress</p>
     <div id="map-canvas"></div>
