--- a/fdpa-resolutions.html
+++ b/fdpa-resolutions.html
@@ -54,7 +54,7 @@
         query: {
           select: "col16>>0",
           from: "1emKZpIHeBPHfcWjdckvWJ_DWmgNrJYTRAMrmllzJ",
-          where: " col3>>0 in ('Borough', 'City', 'Town', 'Township (1st)', 'Township (2nd)') and col5>>0 in ('In work', 'Materials sent', 'Passed')"
+          where: " col3>>0 in ('Borough', 'City', 'Town', 'Township (1st)', 'Township (2nd)', 'Organization') and col5>>0 in ('In work', 'Materials sent', 'Passed')"
         },
         map: map,
         styleId: 4,
