--- a/fdpa-resolutions.html
+++ b/fdpa-resolutions.html
@@ -16,7 +16,14 @@
     function initialize() {
       map = new google.maps.Map(document.getElementById('map-canvas'), {
         center: new google.maps.LatLng(40.99058069667954, -77.62118299218751),
-        zoom: 8
+        zoom: 8,
+		    zoomControl: true,
+            zoomControlOptions: {
+            position: google.maps.ControlPosition.TOP_LEFT
+        },
+        fullscreenControl: true,
+        streetViewControl: false,
+        mapTypeControl: false
       });
       var style = [
         {
