--- a/fdpa-resolutions.html
+++ b/fdpa-resolutions.html
@@ -73,10 +73,18 @@
   </head>
   <body>
     <h2>Fair Districts PA - Local Resolutions</h2>
-    <p>To date, more than 80 counties and municipalities across Pennsylvania have adopted a resolution in support of an indpendent citizens' redistricting commission.</p>
-    <p>Check out the map below to find out what's going on in your area.  If your municipality is already in progress, please <a href="https://www.fairdistrictspa.com/local-groups">contact your local group</a> to get involved.  Otherwise, <a href="https://www.fairdistrictspa.com/take-action/pass-a-local-resolution">find out how to get started</a>.</p>
-    <p>If you'd like to save a picture of your region, follow these <a href="https://tinytake.com/how-to-take-a-screenshot/">instructions for taking a screen shot</a>.
-    <p>Legend: <img src="https://maps.google.com/mapfiles/marker_green.png" /> Passed &nbsp; <img src="https://storage.googleapis.com/support-kms-prod/SNP_2752063_en_v0" /> In progress</p>
+    <p>To date, more than 80 counties and municipalities across Pennsylvania have adopted a
+        resolution in support of an indpendent citizens' redistricting commission.</p>
+    <p>Check out the map below to find out what's going on in your area.  If your municipality is
+        already in progress, please <a href="https://www.fairdistrictspa.com/local-groups">contact
+        your local group</a> to get involved.  Otherwise,
+        <a href="https://www.fairdistrictspa.com/take-action/pass-a-local-resolution">find out how
+        to get started</a>.</p>
+    <p><strong>Legend</strong>: <img src="https://maps.google.com/mapfiles/marker_green.png" />
+        Passed &nbsp;
+        <img src="https://storage.googleapis.com/support-kms-prod/SNP_2752063_en_v0" /> In progress
+        &nbsp; | &nbsp; Click a county or municipality for more info &nbsp; | &nbsp;
+        <a href="https://tinytake.com/how-to-take-a-screenshot/">Help with screen shots</a></p>
     <div id="map-canvas"></div>
   </body>
 </html>
