--- a/fdpa-resolutions-senate.html
+++ b/fdpa-resolutions-senate.html
@@ -7,7 +7,7 @@
     .layer-wizard-search-label { font-family: sans-serif };
   </style>
   <script type="text/javascript"
-    src="https://maps.google.com/maps/api/js?sensor=false">
+    src="https://maps.google.com/maps/api/js?key=AIzaSyBxdPyKNXkcFbFPs5I_e-xqGCUPGVuyabs">
   </script>
   <script type="text/javascript">
     var map;
