--- a/fdpa-resolutions.html
+++ b/fdpa-resolutions.html
@@ -2,79 +2,21 @@
 <html>
   <head>
   <title>Fair Districts PA - Local Resolutions</title>
+  <meta name="referrer" content="origin">
   <style>
     #map-canvas { width:1100px; height:650px; }
-    .layer-wizard-search-label { font-family: sans-serif };
+    .layer-wizard-search-label { font-family: sans-serif }
+    .hidden { display:none; }
   </style>
-  <script type="text/javascript"
-    src="https://maps.google.com/maps/api/js?key=AIzaSyBxdPyKNXkcFbFPs5I_e-xqGCUPGVuyabs">
-  </script>
-  <script type="text/javascript">
-    var map;
-    var layer_0;
-    var layer_1;
-    function initialize() {
-      map = new google.maps.Map(document.getElementById('map-canvas'), {
-        center: new google.maps.LatLng(40.99058069667954, -77.62118299218751),
-        zoom: 8,
-        zoomControl: true,
-            zoomControlOptions: {
-            position: google.maps.ControlPosition.TOP_LEFT
-        },
-        fullscreenControl: true,
-        streetViewControl: false,
-        mapTypeControl: false
-      });
-      var style = [
-        {
-          featureType: 'all',
-          elementType: 'all',
-          stylers: [
-            { saturation: -85 }
-          ]
-        },
-        {
-          featureType: 'poi',
-          elementType: 'all',
-          stylers: [
-            { visibility: 'off' }
-          ]
-        }
-      ];
-      var styledMapType = new google.maps.StyledMapType(style, {
-        map: map,
-        name: 'Styled Map'
-      });
-      map.mapTypes.set('map-style', styledMapType);
-      map.setMapTypeId('map-style');
-      layer_0 = new google.maps.FusionTablesLayer({
-        query: {
-          select: "col12>>0",
-          from: "1emKZpIHeBPHfcWjdckvWJ_DWmgNrJYTRAMrmllzJ",
-          where: " col3>>0 = 'County'"
-        },
-        map: map,
-        styleId: 3,
-        templateId: 4
-      });
-      layer_1 = new google.maps.FusionTablesLayer({
-        query: {
-          select: "col16>>0",
-          from: "1emKZpIHeBPHfcWjdckvWJ_DWmgNrJYTRAMrmllzJ",
-          where: " col3>>0 in ('Borough', 'City', 'Town', 'Township (1st)', 'Township (2nd)', 'Organization') and col5>>0 in ('In work', 'Materials sent', 'Passed')"
-        },
-        map: map,
-        styleId: 4,
-        templateId: 5
-      });
-    }
-    google.maps.event.addDomListener(window, 'load', initialize);
-  </script>
   </head>
   <body>
     <h2>Fair Districts PA - Local Resolutions</h2>
-    <p>To date, more than 130 counties and municipalities across Pennsylvania have adopted a
+    <p id="fall-back-count">To date, more than 198 counties and municipalities across Pennsylvania have adopted a
         resolution in support of an indpendent citizens' redistricting commission.</p>
+    <p id="current-count" class="hidden">To date,
+        <span data-status="passed"></span> counties and municipalities across Pennsylvania have adopted
+        a resolution in support of an independent citizens' redistricting commission.
+        <span data-status="inWork"></span> more are in progress.</p>
     <p>Check out the map below to find out what's going on in your area.  If your municipality is
         already in progress, please <a href="https://www.fairdistrictspa.com/local-groups">contact
         your local group</a> to get involved.  Otherwise,
@@ -86,5 +28,159 @@
         &nbsp; | &nbsp; Click a county or municipality for more info &nbsp; | &nbsp;
         <a href="https://tinytake.com/how-to-take-a-screenshot/">Help with screen shots</a></p>
     <div id="map-canvas"></div>
+    <script src="https://www.promisejs.org/polyfills/promise-7.0.4.min.js">
+    </script>
+    <script type="text/javascript">
+      var map;
+      var layer_0;
+      var layer_1;
+      function initialize() {
+        map = new google.maps.Map(document.getElementById('map-canvas'), {
+          center: new google.maps.LatLng(40.99058069667954, -77.62118299218751),
+          zoom: 8,
+          zoomControl: true,
+              zoomControlOptions: {
+              position: google.maps.ControlPosition.TOP_LEFT
+          },
+          fullscreenControl: true,
+          streetViewControl: false,
+          mapTypeControl: false
+        });
+        var style = [
+          {
+            featureType: 'all',
+            elementType: 'all',
+            stylers: [
+              { saturation: -85 }
+            ]
+          },
+          {
+            featureType: 'poi',
+            elementType: 'all',
+            stylers: [
+              { visibility: 'off' }
+            ]
+          }
+        ];
+        var styledMapType = new google.maps.StyledMapType(style, {
+          map: map,
+          name: 'Styled Map'
+        });
+        map.mapTypes.set('map-style', styledMapType);
+        map.setMapTypeId('map-style');
+        layer_0 = new google.maps.FusionTablesLayer({
+          query: {
+            select: "col12>>0",
+            from: "1emKZpIHeBPHfcWjdckvWJ_DWmgNrJYTRAMrmllzJ",
+            where: " col3>>0 = 'County'"
+          },
+          map: map,
+          styleId: 3,
+          templateId: 4
+        });
+        layer_1 = new google.maps.FusionTablesLayer({
+          query: {
+            select: "col16>>0",
+            from: "1emKZpIHeBPHfcWjdckvWJ_DWmgNrJYTRAMrmllzJ",
+            where: " col3>>0 in ('Borough', 'City', 'Town', 'Township (1st)', 'Township (2nd)', 'Organization') and col5>>0 in ('In work', 'Materials sent', 'Passed')"
+          },
+          map: map,
+          styleId: 4,
+          templateId: 5
+        });
+      }
+      (function() {
+        var apiKey = {
+          amyprime: 'AIzaSyBxdPyKNXkcFbFPs5I_e-xqGCUPGVuyabs',
+          devel: 'AIzaSyBz3CQw1aK0S9UHwxKq-YZtIeqdcOby-Jc'
+        };
+        var locationUrl = new URL(window.location.href);
+
+        addGoogleMaps();
+
+        var statuses = ['passed', 'inWork'];
+        var countElIds = {
+          fallbackCount: 'fall-back-count',
+          currentCount: 'current-count'
+        };
+        var windowPromise =
+          !!document.getElementById(countElIds.fallbackCount) ?
+          Promise.resolve(true) :
+          new Promise(function(windowLoaded) {
+            window.addEventListener('load', windowLoaded);
+          });
+
+        new Promise(function(scriptAdded){
+          addScript(isProduction() ?
+            'https://cdn.rawgit.com/RobinIsTheBird/fdpa-fusiontables/master/distribution/fusionApi_es5.js' :
+            'https://rawgit.com/RobinIsTheBird/fdpa-fusiontables/master/distribution/fusionApi_es5.js',
+            scriptAdded);
+        }).then(function(){
+          var promisedCounts = statuses.map(function(statusSought) {
+            return new Promise(function(gotCount){ // No error handler
+              fdpaResolutions.getResolutionsCount({
+                status: statusSought,
+                fusiontable: '10Uc_t_dBYUV_K_j6HdCMSgLXGs94bXvunQBGDOjF',
+                googleApiKey: getKey(),
+                successHandler: gotCount // called with count argument
+              });
+            });
+          });
+          return [windowPromise].concat(promisedCounts);
+        }).then(function(dfds){
+          Promise.all(dfds).then(function(results){
+            injectCounts([
+                {resolution: 'passed', count: results[1]},
+                {resolution: 'inWork', count: results[2]}]);
+            revealCounts();
+          });
+        });
+
+        function injectCounts(counts){
+          counts.forEach(function(result){
+            var elements = getStatusElements(result.resolution)
+              .forEach(function(el){
+                el.innerHTML = '' + result.count;
+              });
+          })
+        }
+
+        function revealCounts(){
+          document.getElementById(countElIds.fallbackCount)
+            .className = 'hidden';
+          document.getElementById(countElIds.currentCount)
+            .className = '';
+        }
+
+        function addGoogleMaps() {
+          return addScript('https://maps.google.com/maps/api/js?key=' +
+              getKey(),
+            function(){
+              google.maps.event.addDomListener(window, 'load', initialize);
+            });
+        }
+
+        function addScript(src, loadedHandler) {
+          var scriptEl = document.createElement('script');
+          scriptEl.setAttribute('src', src);
+          scriptEl.onload = loadedHandler;
+          document.currentScript.parentNode.insertBefore(scriptEl,
+            document.currentScript);
+        }
+
+        function getStatusElements(statusSought) {
+          return document.querySelectorAll(
+              '[data-status="' + statusSought + '"]');
+        }
+
+        function isProduction() {
+          return locationUrl.hostname === 'amyprime.github.io';
+        }
+
+        function getKey() {
+          return isProduction() ? apiKey.amyprime : apiKey.devel;
+        }
+      })()
+    </script>
   </body>
 </html>
