Update count, fix spelling

--- a/fdpa-resolutions.html
+++ b/fdpa-resolutions.html
@@ -73,8 +73,8 @@
   </head>
   <body>
     <h2>Fair Districts PA - Local Resolutions</h2>
-    <p>To date, more than 130 counties and municipalities across Pennsylvania have adopted a
-        resolution in support of an indpendent citizens' redistricting commission.</p>
+    <p>To date, more than 190 counties and municipalities across Pennsylvania have adopted a
+        resolution in support of an independent citizens' redistricting commission.</p>
     <p>Check out the map below to find out what's going on in your area.  If your municipality is
         already in progress, please <a href="https://www.fairdistrictspa.com/local-groups">contact
         your local group</a> to get involved.  Otherwise,
