Add links to other projects

--- a/index.html
+++ b/index.html
@@ -1,7 +1,21 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>AmyPrime's GitHub Pages</h1>
+
+<p>Here are some pages I have produced for <a href="https://fairdistrictspa.com/"> Fair Districts PA</a>. Please note that these pages are mostly intended to be embedded inside a larger page, not viewed standalone.</p>
+
+<ul>
+
+<li>The <a href="https://fdpa.github.io/maps/redistricting-slider.html">redistricting slider</a> shows the difference between former and proposed district maps.</li>
+
+<li>The <a href="https://fdpa.github.io/legislators/lacra-map.html">legislator lookup</a> informs people about their current representative's voting history.</li>
+
+<li>The <a href="https://fdpa.github.io/legislators/kbyv-2024.html">"know before you vote" page</a> informs people about their local candidates.</li>
+
+<li>The <a href="https://fdpa.github.io/resolutions/">resolutions map</a> allows people to explore whether their municipality or county has passed a resolution in favor of fair districts.</li>
+
+</ul>
+
 </body>
 </html>
