--- a/index.html
+++ b/index.html
@@ -17,5 +17,7 @@
 
 </ul>
 
+I have also implemented a <a href="https://github.com/amyprime/airtable">containerized Node.js package</a> which powers the <a href="https://fairdistrictspa.com/take-action/contact-your-legislator">"contact your legislator" page</a>.
+
 </body>
 </html>
