--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 <body>
 <h1>AmyPrime's GitHub Pages</h1>
 
-<p>Here are some pages I have produced for <a href="https://fairdistrictspa.com/"> Fair Districts PA</a>. Please note that these pages are mostly intended to be embedded inside a larger page, not viewed standalone.</p>
+<p>Here are some pages I have produced for <a href="https://fairdistrictspa.com/"> Fair Districts PA</a>.</p>
+
+<p>Please note that these pages contain minimal formatting because they are intended to be embedded inside a larger page.</p>
 
 <ul>
 
 <li>The <a href="https://fdpa.github.io/maps/redistricting-slider.html">redistricting slider</a> shows the difference between former and proposed district maps.</li>
 
-<li>The <a href="https://fdpa.github.io/legislators/lacra-map.html">legislator lookup</a> informs people about their current representative's voting history.</li>
+<li>The "<a href="https://fairdistrictspa.com:8443/airtable/test/cyl.html">contact your legislator</a>" page provides current legislators' contact information and voting history.</li>
 
-<li>The <a href="https://fdpa.github.io/legislators/kbyv-2024.html">"know before you vote" page</a> informs people about their local candidates.</li>
+<li>The "<a href="https://fdpa.github.io/legislators/kbyv-2024.html">know before you vote</a>" page informs people about the candidates in their local elections.</li>
 
 <li>The <a href="https://fdpa.github.io/resolutions/">resolutions map</a> allows people to explore whether their municipality or county has passed a resolution in favor of fair districts.</li>
 
 </ul>
-
-I have also implemented a <a href="https://github.com/amyprime/airtable">containerized Node.js package</a> which powers the <a href="https://fairdistrictspa.com/take-action/contact-your-legislator">"contact your legislator" page</a>.
 
 </body>
 </html>
